--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -65,7 +65,7 @@
         <a mat-list-item [routerLink]="['/asesores/ventasclientearticulo/']" routerLinkActive="active-list-item"><span class="font_side">Ventas por cliente y artículo</span></a>
         <a mat-list-item [routerLink]="['/asesores/reporteventas/']" routerLinkActive="active-list-item"><span class="font_side">Reporte de ventas</span></a>
         <a mat-list-item [routerLink]="['/asesores/consultainactivos/']" routerLinkActive="active-list-item"><span class="font_side">Consulta de inactivos</span></a>
-        <a mat-list-item href="http://www.catalogofonelli.com.mx/?route=product/category&path=70" target="_blank"><span class="font_side">Catalogo de Joyeria </span></a>
+        <a mat-list-item href="http://www.catalogofonelli.com.mx/?route=product/category&path=70" target="_blank"><span class="font_side_ic">Catálogo interactivo </span></a>
       </mat-nav-list>
     </mat-sidenav>
   
