--- a/src/app/components/ventasarticulo/ventasarticulo.component.html
+++ b/src/app/components/ventasarticulo/ventasarticulo.component.html
@@ -402,7 +402,7 @@
                   <th style="background-color: #24a4cc; color: white;">DESCRIPCIÓN</th>
                   <th style="background-color: #24a4cc; color: white;">TIPO</th>
                   <th style="background-color: #24a4cc; color: white; text-align: right;">PIEZAS</th>
-                  <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white; text-align: right;">%P/CAT/TH</th>
+                  <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white; text-align: right;">%P/CAT</th>
                   <th style="background-color: #24a4cc; color: white; text-align: right;">GRAMOS</th>
                   <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white; text-align: right;">%G/CAT</th>
                   <th style="background-color: #24a4cc; color: white; text-align: right;">IMPORTE VENTA</th>              
@@ -451,7 +451,7 @@
                             <td class="FilasFonelli">{{art.ArticuloCodigo}}</td>
                             <td class="FilasFonelli">{{art.ArticuloDescripc}}</td>
                             <td class="FilasFonelli">{{art.ArticuloTipo}}</td>
-                            <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(art.Piezas),'$')}}</td>
+                            <td class="FilasFonelli" style="text-align: right;">{{art.Piezas}}</td>
                             <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{ reemplaza(formatoMoneda(art.PiezasPorcentaje),'$')}}</td>
                             <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(art.Gramos),'$')}}</td>
                             <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(art.GramosPorcentaje),'$')}}</td>
@@ -464,7 +464,7 @@
                           <td class="FilasFonelli"></td>
                           <td class="FilasFonelli"></td>
                           <td class="FilasFonelli" style="text-align: right;">Total Línea</td>
-                          <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasArticulo(linPro.Articulos)),'$')}}</td>
+                          <td class="FilasFonelli" style="text-align: right;">{{getTotalPiezasArticulo(linPro.Articulos)}}</td>
                           <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{ reemplaza(formatoMoneda(getTotalPiezasPorArticulo(linPro.Articulos)),'$')}}</td>
                           <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosArticulo(linPro.Articulos)),'$')}}</td>
                           <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{ reemplaza(formatoMoneda(getTotalGramosPorArticulo(linPro.Articulos)),'$')}}</td>
@@ -475,7 +475,7 @@
                           <td class="FilasFonelli">{{linPro.LineaCodigo}}</td>
                           <td class="FilasFonelli">{{linPro.LineaDescripc}}</td>
                           <td class="FilasFonelli">{{linPro.ColeccionDescripc}}</td>
-                          <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasArticulo(linPro.Articulos)),'$')}}</td>
+                          <td class="FilasFonelli" style="text-align: right;">{{getTotalPiezasArticulo(linPro.Articulos)}}</td>
                           <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasPorArticulo(linPro.Articulos)),'$')}}</td>
                           <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosArticulo(linPro.Articulos)),'$')}}</td>
                           <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosPorArticulo(linPro.Articulos)),'$')}}</td>
@@ -488,7 +488,7 @@
                       <td></td>
                       <td></td>      
                       <td class="FilasFonelli" style="text-align: right;">Total SubCategoria</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasxSubCat(subCat.LineasProducto)),'$')}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxSubCat(subCat.LineasProducto)}}</td>
                       <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasPorxSubCat(subCat.LineasProducto)),'$')}}</td>
                       <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosxSubCat(subCat.LineasProducto)),'$')}}</td>
                       <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosPorxSubCat(subCat.LineasProducto)),'$')}}</td>
@@ -501,7 +501,7 @@
                       <td></td>
                       <td></td>      
                       <td class="FilasFonelli" style="text-align: right;">Total Categoria</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasxCategoria(venArt.Subcategorias)),'$')}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxCategoria(venArt.Subcategorias)}}</td>
                       <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;"></td>
                       <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosxCategoria(venArt.Subcategorias)),'$')}}</td>
                       <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;"></td>
@@ -516,7 +516,7 @@
                   <td></td>
                   <td></td>      
                   <td class="FilasFonBold" style="text-align: right; color: #183e6f;">Total General</td>
-                  <td class="FilasFonBold" style="text-align: right; color: #183e6f;">{{reemplaza(formatoMoneda(getTotalPiezasxCliente(oVentasArticuloRes.Contenido)),'$')}}</td>
+                  <td class="FilasFonBold" style="text-align: right; color: #183e6f;">{{getTotalPiezasxCliente(oVentasArticuloRes.Contenido)}}</td>
                   <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right; color: #183e6f; "></td>
                   <td class="FilasFonBold" style="text-align: right; color: #183e6f;">{{reemplaza(formatoMoneda(getTotalGramosxCliente(oVentasArticuloRes.Contenido)),'$')}}</td>
                   <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right; color: #183e6f;"></td>
@@ -602,7 +602,7 @@
                         <td class="FilasFonelli">{{cat.CategoriaCodigo}}</td>
                         <td class="FilasFonelli">{{art.ArticuloDescripc}}</td>
                         <td class="FilasFonelli">{{art.ArticuloTipo}}</td>
-                        <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasArticulo(linPro.Articulos)),'$')}}</td>
+                        <td class="FilasFonelli" style="text-align: right;">{{getTotalPiezasArticulo(linPro.Articulos)}}</td>
                         <td *ngIf="!bCliente"class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasPorArticulo(linPro.Articulos)),'$')}}</td>
                         <td class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosArticulo(linPro.Articulos)),'$')}}</td>
                         <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosPorArticulo(linPro.Articulos)),'$')}}</td>
@@ -619,7 +619,7 @@
                       <td></td>      
                       <td></td>      
                       <td class="FilasFonelli" style="text-align: right;">Total SubCategoria</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasxSubCat(subCat.LineasProducto)),'$')}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxSubCat(subCat.LineasProducto)}}</td>
                       <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasPorxSubCat(subCat.LineasProducto)),'$')}}</td>
                       <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosxSubCat(subCat.LineasProducto)),'$')}}</td>
                       <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosPorxSubCat(subCat.LineasProducto)),'$')}}</td>
@@ -636,7 +636,7 @@
                     <td></td>
                     <td></td>      
                     <td class="FilasFonelli" style="text-align: right;">Total Categoria</td>
-                    <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalPiezasxCategoria(cat.Subcategorias)),'$')}}</td>
+                    <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxCategoria(cat.Subcategorias)}}</td>
                     <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;"></td>
                     <td class="FilasFonBold" style="text-align: right;">{{reemplaza(formatoMoneda(getTotalGramosxCategoria(cat.Subcategorias)),'$')}}</td>
                     <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;"></td>
@@ -655,7 +655,7 @@
                 <td></td>
                 <td></td>      
                 <td class="FilasFonBold" style="text-align: right; color: #183e6f;">Total General</td>
-                <td class="FilasFonBold" style="text-align: right; color: #183e6f;">{{reemplaza(formatoMoneda(getTotalPiezasxCliente(oVentasArticuloPzasImpRes.Contenido)),'$')}}</td>
+                <td class="FilasFonBold" style="text-align: right; color: #183e6f;">{{getTotalPiezasxCliente(oVentasArticuloPzasImpRes.Contenido)}}</td>
                 <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right; color: #183e6f;"></td>
                 <td class="FilasFonBold" style="text-align: right; color: #183e6f;">{{reemplaza(formatoMoneda(getTotalGramosxCliente(oVentasArticuloPzasImpRes.Contenido)),'$')}}</td>
                 <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right; color: #183e6f;"></td>
