--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -210,7 +210,7 @@
               <div class="row">
 
                 <div >
-                  <label>Numero de cliente:   <strong>{{oBuscar.ClienteCodigo}}  -  {{sNombre}}</strong></label>
+                  <label>Numero de cliente:   <strong>{{oBuscar.ClienteCodigo+'-'+oBuscar.ClienteFilial}} {{obtenNombreCliente(oBuscar.ClienteCodigo)}}</strong></label>
                   <br>
                   <label> Pedido: <strong>{{oBuscaDetalle.PedidoFolio}}</strong> </label>
                 </div>
