--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -26,6 +26,16 @@
 
 @font-face {
 
+   font-family: "Quicksand-Bold";
+
+   src: url("../fonts/Quicksand-Bold.ttf");
+
+}
+
+
+
+@font-face {
+
    font-family: "Brittany-Angella";
 
    src: url("../fonts/brittany-angella.ttf");
@@ -48,6 +58,13 @@
    color: #183e6f;
    font-size: 20px;
    font-family: "Quicksand-SemiBold";
+}
+
+.font_side_ic {
+   color: #183e6f;
+   font-size: 20px;
+   font-weight: bold;
+   font-family: "Quicksand-Bold";
 }
 
 .bordered {
