--- a/src/app/components/reporteventas/reporteventas.component.html
+++ b/src/app/components/reporteventas/reporteventas.component.html
@@ -286,27 +286,41 @@
 
                     <div class="form-group col-md-3">
                       <label class="CamposFonelli">Desde TCte</label>
-                      <input 
-                        type="text" 
-                        id="idTipCteDes"
-                        class="form-control"
-                        name="idTipCteDes"
-                        #nombre="ngModel"
-                        [(ngModel)]="oBuscar.TipoClienteDesde"
-                        required
-                      >
+                      <select 
+                      class="form-select" 
+                      name="idTipCteDes"
+                      #nombre="ngModel"
+                      [(ngModel)]="oBuscar.TipoClienteDesde"                          
+                      required
+                    >
+                      <ng-container *ngFor='let dato of oTiposClienteCon;' >
+                        <option value="{{dato.TipoCodigo}}">
+                          {{dato.TipoCodigo}} - {{dato.TipoDescripc}}
+                        </option>
+                      </ng-container>
+                                              
+                    </select>
+
+                      
                     </div>
                     <div class="form-group col-md-3">
                       <label class="CamposFonelli">Hasta TCte</label>
-                      <input 
-                      type="text" 
-                      id="idTipCteHas"
-                      class="form-control"
+                      <select 
+                      class="form-select" 
                       name="idTipCteHas"
                       #nombre="ngModel"
-                      [(ngModel)]="oBuscar.TipoClienteHasta"
+                      [(ngModel)]="oBuscar.TipoClienteHasta"                          
                       required
                     >
+                      <ng-container *ngFor='let dato of oTiposClienteCon;' >
+                        <option value="{{dato.TipoCodigo}}">
+                          {{dato.TipoCodigo}} - {{dato.TipoDescripc}}
+                        </option>
+                      </ng-container>
+                                              
+                    </select>
+
+                      
                     </div>
 
 
