Se agregan cambios de encabeado fijo para tablas en reportes

--- a/src/app/components/consultainactivos/consultainactivos.component.html
+++ b/src/app/components/consultainactivos/consultainactivos.component.html
@@ -70,7 +70,7 @@
     </div>  
 
      
-      <div *ngIf="bBandera" class="container" >  
+      <div *ngIf="bBandera" class="table-responsive" >  
         <!-- <div class="container" >      -->
 
         <br>
@@ -93,8 +93,8 @@
               </div> 
         </div>
 
-    <div  id="pdfTable" #pdfTable>
-        <table  class="table table-hover table-striped" style="display:block;   overflow-x: auto;" [style.height.px]="sHeight">
+    <div class="contenedor-tabla"  id="pdfTable" #pdfTable>
+        <table  class="table table-hover table-striped" >
           <thead>
             <tr class="EncTabla">                 
               <th class="table-warning" scope="col"></th>
