--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -252,7 +252,7 @@
               </div> 
         </div>
 
-    <div id="pdfTable" #pdfTable >
+    <div class="contenedor-tabla table-responsive" id="pdfTable" #pdfTable >
 
       <h6 style="text-align: center; color:#24a4cc; ">Ventas año anterior desde {{oBuscar.FechaDesdeAnterior}} hasta {{oBuscar.FechaHastaAnterior}}</h6>
         <table  class="table table-hover table-striped">
