--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -138,8 +138,8 @@
 
           
 
-      <div id="pdfTable" #pdfTable>
-          <table  class="table table-hover table-striped">
+      <div class="contenedor-tabla table-responsive" id="pdfTable" #pdfTable>
+          <table  class="table table-hover table-striped" >
             <thead>
               <tr class="EncTabla">
               <th style="background-color: #24a4cc; color: white;" scope="col" >#</th>
