--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -154,7 +154,7 @@
                 </div> 
           </div>
     
-        <div id="pdfTable" #pdfTable>
+        <div class="contenedor-tabla table-responsive" id="pdfTable" #pdfTable>
           <table class="table table-hover table-striped  ">
             <thead>
               <tr class="EncTabla">
